--- a/src/chatbot.css
+++ b/src/chatbot.css
@@ -5,16 +5,16 @@
 	--chat--color-secondary: #20b69e;
 	--chat--color-secondary-shade-50: #1ca08a;
 	--chat--color-white: #ffffff;
-	--chat--color-light: #f2f4f8;
-	--chat--color-light-shade-50: #e6e9f1;
-	--chat--color-light-shade-100: #c2c5cc;
+	--chat--color-light: #dcba00;
+	--chat--color-light-shade-50: #998100;
+	--chat--color-light-shade-100: #6d5c00;
 	--chat--color-medium: #d2d4d9;
-	--chat--color-dark: #101330;
+	--chat--color-dark: #fff1a6;
 	--chat--color-disabled: #777980;
 	--chat--color-typing: #404040;
 
 	--chat--spacing: 1rem;
-	--chat--border-radius: 0.25rem;
+	--chat--border-radius: 0.5rem;
 	--chat--transition-duration: 0.15s;
 
 	--chat--window--width: 400px;
@@ -22,27 +22,26 @@
 
 	--chat--header-height: auto;
 	--chat--header--padding: var(--chat--spacing);
-	--chat--header--background: var(--chat--color-dark);
-	--chat--header--color: var(--chat--color-light);
+	--chat--header--background: var(--chat--color-light-shade-100);
+	--chat--header--color: var(--chat--color-dark);
 	--chat--header--border-top: none;
 	--chat--header--border-bottom: none;
 	--chat--header--border-bottom: none;
 	--chat--header--border-bottom: none;
 	--chat--heading--font-size: 2em;
-	--chat--header--color: var(--chat--color-light);
 	--chat--subtitle--font-size: inherit;
 	--chat--subtitle--line-height: 1.8;
 
 	--chat--textarea--height: 50px;
 
-	--chat--message--font-size: 1rem;
+	--chat--message--font-size: 1.1rem;
 	--chat--message--padding: var(--chat--spacing);
 	--chat--message--border-radius: var(--chat--border-radius);
 	--chat--message-line-height: 1.8;
 	--chat--message--bot--background: var(--chat--color-white);
-	--chat--message--bot--color: var(--chat--color-dark);
+	--chat--message--bot--color: var(--chat--color-light-shade-100);
 	--chat--message--bot--border: none;
-	--chat--message--user--background: var(--chat--color-secondary);
+	--chat--message--user--background: var(--chat--color-light-shade-100);
 	--chat--message--user--color: var(--chat--color-white);
 	--chat--message--user--border: none;
 	--chat--message--pre--background: rgba(0, 0, 0, 0.05);
